<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="20dp"
    android:gravity="center_horizontal">
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/reg_email"
        android:autofillHints="@string/reg_email"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:drawablePadding="8dp"
        android:background="@drawable/bg_rec"
        android:drawableStart="@drawable/main_email"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/et_email"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/reg_username"
        android:autofillHints="@string/reg_username"
        android:inputType="text"
        android:textSize="16sp"
        android:drawablePadding="8dp"
        android:background="@drawable/bg_rec"
        android:drawableStart="@drawable/username"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/et_username"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/reg_password"
        android:autofillHints="@string/reg_password"

        android:textSize="16sp"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        android:background="@drawable/bg_rec"
        android:drawableStart="@drawable/password"/>

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="138dp"
        android:layout_below="@+id/et_password"
        android:orientation="horizontal"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">

        <Button
            android:id="@+id/btn_reg_confirm"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:text="@string/reg_confirm" />

        <Button
            android:id="@+id/btn_reg_cancel"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="50dp"
            android:text="@string/reg_cancel" />
    </LinearLayout>

</RelativeLayout>