<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="#FFFFFF">
    <ImageView
        android:id="@+id/main_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_pic"
        android:layout_marginTop="80dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/logan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_pic"
        android:layout_marginTop="35dp"
        android:textSize="15sp"
        android:text="@string/logan" />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_below="@+id/main_pic"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="300dp">
        <Button
            style="@style/TextAppearance.AppCompat.Button"
            android:id="@+id/main_reg"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/main_reg"
            android:textSize="20sp"
            android:layout_marginTop="250dp"/>

        <Button
            style="@style/TextAppearance.AppCompat.Button"
            android:id="@+id/main_login"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="250dp"
            android:text="@string/main_login"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>